# cyphus-interpolation

./: .gitignore  Cargo.toml  README.md
benches/: cubic_derivative.rs  cubic_eval.rs  linear_derivative.rs  linear_eval.rs
src/: dierckx.rs  interp1d.rs  lib.rs  prelude.rs  traits.rs
src/dierckx/: curfit.rs  fpader.rs  fpback.rs  fpbspl.rs  fpchec.rs  fpcurf.rs  fpcuro.rs  fpdisc.rs  fpgivs.rs  fpintb.rs  fpknot.rs  fprati.rs  fprota.rs  spalde.rs  splder.rs  splev.rs  splint.rs  sproot.rs
src/interp1d/: acc.rs  cubic.rs  linear.rs  traits.rs  util.rs
tests/: cubic.rs  linear.rs  univariate_spline.rs
