[package]
name = "cyphus-interpolation"
version = "0.1.1"
authors = ["Logan A Morrison <loanmorr@ucsc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cyphus_interpolation"
bench = false
test = true

[dependencies]
ndarray="0.13.1"
